--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
         <title>Nikunj Bhavsar</title>
         <link rel="stylesheet" href="style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -54,8 +55,7 @@
                     <div class="workcard" style="grid-area: wc1">
                         <img class="abc1 " src="cardcover.jpg" alt="">
                         <span>The place to be Gallery</span>
-                        <p>Intern</p>
-                        <p>Jan 2023 - May 2023</p>
+                        <p>Intern | Jan 2023 - May 2023</p>
 
                     </div>
                     <div class="workcard" style="grid-area: wc2">
