--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <span id="mins">00</span>
                     </div>
                     <div class="bento-grid-item" style="grid-area :about">
-                        <p>👋 Hey there! I’m Nikunj, a curious mind with a knack for turning ideas into reality—whether it’s neural computing or just finding the best scenic spot for a weekend trip. I’m probably planning my next adventure or convincing my friends that a 2 AM road trip is a great idea. I thrive on challenges, whether it’s building AI platforms or cracking ethical dilemmas. If it’s complex, I’m in. If it’s fun, even better. Let’s build something awesome! </p>
+                        <p>👋 Hey there! I’m Nikunj, a curious mind with a knack for turning ideas into reality, whether it’s neural computing or just finding the best scenic spot for a weekend trip. I’m probably planning my next adventure or convincing my friends that a 2 AM road trip is a great idea. I thrive on challenges, whether it’s building AI platforms or cracking ethical dilemmas. If it’s complex, I’m in. If it’s fun, even better. Let’s build something awesome! </p>
                     </div>
                     <div class="bento-grid-item" style="grid-area :education">
                         <span>University of Herfordshire</span>
@@ -53,12 +53,14 @@
                     </div>
                     <div class="socials" style="grid-area: s1">
                         <h3>Want to work together?</h3>
-                        <h5>contact:</h5>
+                        <h5>Contact:</h5>
                         <p>nikunj15bhavsar@gmail.com</p>
                         <h5>Socials:</h5>
-                        <a href="https://www.instagram.com/notnikunj/" target="_blank">Instagram</a>
-                        <a href="https://github.com/notnikunj" target="_blank">Github</a>
-                        <a href="https://www.linkedin.com/in/nikunj-bhavsar-3ab1932a3/" target="_blank">LinkedIn</a>
+                        <div class="social-links">
+                            <a href="https://www.instagram.com/notnikunj/" target="_blank">Instagram</a>
+                            <a href="https://github.com/notnikunj" target="_blank">Github</a>
+                            <a href="https://www.linkedin.com/in/nikunj-bhavsar-3ab1932a3/" target="_blank">LinkedIn</a>
+                        </div>
                     </div>
                     <div class="techstack" style="grid-area: t1">
                         <img class="tci" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/java/java-original.svg" />
