--- a/tptbg.html
+++ b/tptbg.html
@@ -26,7 +26,7 @@
                 
                 
                 <div class="bento-grid-item" style="grid-area :about">
-                    <p>During my internship at The Place to Be Gallery, I worked as a backend developer, contributing to the development and maintenance of the official website,that was built using WordPress. My primary responsibilities included enhancing backend functionalities, managing content workflows, and integration of plugins. This role gave me hands-on experience in real-world content management and production for a live art platform.</p>
+                    <p>During my internship at The Place to Be Gallery, I worked as a backend developer, contributing to the development and maintenance of the official website, that was built using WordPress. My primary responsibilities included enhancing backend functionalities, managing content workflows, and integration of plugins. This role gave me hands-on experience in real world content management and production for a live art platform.</p>
                 </div>
                 <div class="bento-grid-item" style="grid-area :education">
 
