--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                         <p>👋 Hey there! I’m Nikunj, a curious mind with a knack for turning ideas into reality, whether it’s neural computing or just finding the best scenic spot for a weekend trip. I’m probably planning my next adventure or convincing my friends that a 2 AM road trip is a great idea. I thrive on challenges, whether it’s building AI platforms or cracking ethical dilemmas. If it’s complex, I’m in. If it’s fun, even better. Let’s build something awesome! </p>
                     </div>
                     <div class="bento-grid-item" style="grid-area :education">
-                        <span>University of Herfordshire</span>
+                        <span>University of Hertfordshire</span>
                         <p>2022 - 2025</p>
 
                         <span>S.G School of Science</span>
