--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="indexstyle.css" />
-    <link rel="preload" href="images/grid-bg.png" as="image">
+    <link rel="preload" href="image.png" as="image">
+    <link rel="shortcut icon" href="titlephoto.png" type="image/x-icon">
     <script defer src="script.js"></script>
-    <title>Your Name</title>
+    <title>Nikunj Bhavsar</title>
   </head>
   <body>
     <header class="navigation-bar">
@@ -26,7 +27,7 @@
             </p>
 
             <div class="hero-links">
-                <a href="NikunjBhavsarCV.pdf" target="_blank">Resume</a>
+                <a href="https://github.com/notnikunj" target="_blank">GitHub</a>
                 <a href="https://www.linkedin.com/in/nikunj-bhavsar-3ab1932a3/" target="_blank">LinkedIn</a>
                 <a href="mailto:nikunj15bhavsar@gmail.com">Email</a>
             </div>
@@ -66,7 +67,6 @@
         </div>
     </section>
 
-<!-- ===== Modals ===== -->
 
     <div id="modal1" class="modal">
         <div class="modal-content">
@@ -165,12 +165,10 @@
     <section id="about" class="section about-section">
         <div class="about-container">
 
-            <!-- Image -->
             <div class="about-image">
                 <img src="myphoto.jpg" alt="My Photo">
             </div>
 
-            <!-- Text -->
             <div class="about-content">
                 <h3>About Me</h3>
                 <p>
@@ -178,7 +176,6 @@
                     Currently pursuing an MSc in Data Science at the University of Bristol, I am eager to apply my skills to solve real-world problems and contribute to innovative projects.
                 </p>
 
-                <!-- Education -->
                 <div class="about-subsection">
                     <h3>Education</h3>
                     <ul class="education-list">
@@ -187,7 +184,6 @@
                     </ul>
                 </div>
 
-                <!-- Skills -->
                 <div class="about-subsection">
                     <h3>Skills</h3>
                     <div class="skills-grid">
