--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <p>CSS</p>
             <p>JavaScript</p>
             <div class="github">
-                <a href="https://www.linkedin.com/in/nikunj-bhavsar-3ab1932a3/" target="_blank">GitHub</a>
+                <a href="https://github.com/notnikunj/Old-Portfolio" target="_blank">GitHub</a>
             </div>
 
 
