--- a/index.html
+++ b/index.html
@@ -210,6 +210,11 @@
             </div>
         </section>
 
+
+        <footer class="footer">
+            <p>Still building, Still learning - Nikunj Bhavsar © 2025</p>
+        </footer>
+
     </div>
 
     
